--- a/semester_2/computer_science_2.tex
+++ b/semester_2/computer_science_2.tex
@@ -1,46 +1,19 @@
 \documentclass[12pt]{extarticle}
+
+\usepackage{preamble}
+
 \title{Computer Science 2 Notes}
-\author{Giacomo Ellero}
 \date{Semester 2, 2023/2024}
 
-\usepackage{amsfonts}
-\usepackage{amsthm}
-\usepackage{amssymb}
-\usepackage{amsmath}
-\usepackage{mathtools}
-\usepackage{commath}
-\usepackage{dirtytalk}
-\usepackage{parskip}
-\usepackage{mathrsfs}
-\usepackage[many]{tcolorbox}
-\usepackage{xparse}
-\usepackage[a4paper,margin=1.5cm]{geometry}
-\usepackage{bookmark}
-\usepackage{bytefield}
-\usepackage{minted}
-\usepackage{capt-of}
-\usepackage{float}
-\usepackage{tikz}
-\usepackage{enumitem}
+% \newcommand{\C}{\mathbb{C}}
+% \newcommand{\R}{\mathbb{R}}
+% \newcommand{\N}{\mathbb{N}}
+% \newcommand{\F}{\mathcal{F}}
+% \renewcommand{\Re}{\operatorname{Re}}
+% \renewcommand{\Im}{\operatorname{Im}}
 
-\newcommand{\C}{\mathbb{C}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\F}{\mathcal{F}}
-\renewcommand{\Re}{\operatorname{Re}}
-\renewcommand{\Im}{\operatorname{Im}}
+\setlength{\headheight}{15pt} % ??? we do what fancyhdr tells us to do
 
-\newenvironment{absolutelynopagebreak}
-  {\par\nobreak\vfil\penalty0\vfilneg
-   \vtop\bgroup}
-  {\par\xdef\tpd{\the\prevdepth}\egroup
-   \prevdepth=\tpd}
-
-\newtcolorbox{examplebox}[1]{colback=green!5!white,colframe=green!40!black,title={#1},fonttitle=\bfseries,parbox=false}
-\newtcolorbox{notebox}[1]{colback=blue!5!white,colframe=blue!40!black,title={Note: #1},fonttitle=\bfseries,parbox=false}
-\newtcolorbox{bluebox}[1]{colback=blue!5!white,colframe=blue!40!black,title={#1},fonttitle=\bfseries,parbox=false}
-\newtcolorbox{warningbox}[1]{colback=orange!5!white,colframe=orange!90!black,title={Warning: #1},fonttitle=\bfseries,parbox=false}
-   
 \begin{document}
 
 \maketitle
@@ -1002,7 +975,7 @@ We can define the following for DFS trees:
         \draw[->, very thick, green] (H) to [bend right] (G);
 
     \end{tikzpicture}
-    \captionof{figure}{The DFS tree of the graph in (\ref{fig:directedgraph}) with forward (red), back (blue), and cross edges (green)} \label{fig:dfs-tree-fbg}
+    \caption{The DFS tree of the graph in (\ref{fig:directedgraph}) with forward (red), back (blue), and cross edges (green)} \label{fig:dfs-tree-fbg}
 \end{figure}
 
 We note that if we consider the pre and post variable for each node as an \say{interval},
@@ -1624,7 +1597,8 @@ Then, we have to take into account the time complexity of the priority queue ope
 
 This is the simplest implementation and the original one that Dijkstra used.
 
-\begin{center}
+\begin{table}[H]
+    \centering
     \begin{tabular}{|c|c|}
         \hline
         \textbf{Operation}  & \textbf{Time complexity} \\
@@ -1635,9 +1609,9 @@ This is the simplest implementation and the original one that Dijkstra used.
         Update priority     & $O(1)$                   \\
         \hline
     \end{tabular}
-    \captionof{table}{Time complexity of the operations of a priority queue implemented with a linked list}
+    \caption{Time complexity of the operations of a priority queue implemented with a linked list}
     \label{tab:priorityqueue_linkedlist}
-\end{center}
+\end{table}
 
 Note that these operations have these time complexities only if applied to this specific algorithm, in general they can be different.
 
@@ -1714,7 +1688,8 @@ where the letter is the value of the node and the number is the priority.
 
 We can now compile a table with the time complexity of each operation of a min-heap.
 
-\begin{center}
+\begin{table}[H]
+    \centering
     \begin{tabular}{ |c|c|c| }
         \hline
         \textbf{Operation} & \textbf{Time complexity} & \textbf{Comment}                        \\
@@ -1725,9 +1700,9 @@ We can now compile a table with the time complexity of each operation of a min-h
         Update priority    & $O(\log n)$              & We need to heapify the tree             \\
         \hline
     \end{tabular}
-    \captionof{table}{Time complexity of the operations of a min-heap}
+    \caption{Time complexity of the operations of a min-heap}
     \label{tab:minheap}
-\end{center}
+\end{table}
 
 \textbf{Heapifying} the tree means to restore the property of the min-heap after we removed the root or updated the priority of a node.
 
@@ -2111,5 +2086,226 @@ The algorithm works as follows:
 \end{minted}
 
 From the array of predecessors \texttt{P} we can reconstruct the minimum spanning tree of $G$.
+
+% Class of 05/03/2024
+
+\subsection{Time complexity}
+
+The time complexity of this algorithm is the same as Dijkstra's algorithm, since the only difference is that we are checking the weight of the edges and not the distance from the starting vertex.
+
+Therefore we have a complexity of $O(|V| \log |V| + |E| \log |V|)$.
+
+\section{Huffman coding}
+
+\subsection{Introduction}
+
+\subsubsection{Problem}
+
+Let $\Omega$ be a set of symbols (like the alphabet) and define a string to be a sequence of symbols from $\Omega$.
+
+Given a string we want to encode it as a sequence of bits such that
+
+\begin{itemize}
+    \item The sequence can be efficiently decoded
+    \item The sequence is as short as possible
+\end{itemize}
+
+\subsubsection{Example}
+
+An example of encoding for the English alphabet is ASCII, which uses 8 bits for each character.
+This is a very simple encoding which is very fast to decode but it is not very efficient in terms of space and only supports 128 fixed-length characters.
+
+(As a side note, nowadays the preferred encoding for text is UTF-8, which is a superset of ASCII and can store any Unicode character.)
+
+Storing an ASCII string is not very space efficient, for example the letter \texttt{Q} (in Italian at least) has to be followed by a \texttt{U} or another \texttt{Q} and it is not a frequent letter.
+ASCII doesn't know about this, it just assigns 8 bits to each character, but we can exploit patterns in the strings we want to store to make the encoding more efficient.
+
+\subsubsection{Theorem: probability of a good encoding}
+
+\textbf{\underline{Theorem}}: Let $\Omega$ be a set of symbols with $\abs{\Omega} = 2^k$, and $x$ be a string of length $n$ over $\Omega$ chosen with a uniform probability from $\Omega^n$.
+Then
+
+$$
+    P(\operatorfont{length}(E(x)) \leq kn - \alpha) \leq 2^{-\alpha +1}
+$$
+
+where $E(x)$ is the encoding of $x$.
+
+\begin{proof}
+    There are $2^{kn}$ possible strings of length $n$ over $\Omega$. Each string $x$ is chosen with a probability of $2^{-kn}$.
+    Let the length of some string be $t = kn - \alpha$.
+
+    The maximum number of strings that is possible to encode such that $\operatorfont{length}(E(x)) \leq t$ can't be more than the number of strings of length $n$ over $\Omega$ because otherwise we would have two strings that are encoded in the same way, which is not possible (pigeonhole principle).
+
+    The number of strings of length less than or equal to $t$ is
+
+    $$
+        \sum_{i=0}^{t} 2^{i} = 2^{t+1} - 1 < 2^{t+1}
+    $$
+
+    Then the probability that a string's encoding is less than or equal to $t$ is
+
+    $$
+        P(\cdot) \leq \frac{2^{t+1}}{2^{kn}} = \frac{2^{(kn - \alpha) + 1}}{2^{kn}} = 2^{-\alpha + 1}
+    $$
+\end{proof}
+
+This theorem says in a world of total randomness we will never have a good encoding because, for example, not all sequences of characters form a word.
+
+\subsubsection{Example}
+
+Suppose we create an encoding in which some characters are encoded with less bits than others.
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{ |c|c| }
+        \hline
+        \textbf{Character} & \textbf{Encoding} \\
+        \hline
+        A                  & 0                 \\
+        B                  & 01                \\
+        C                  & 11                \\
+        \hline
+    \end{tabular}
+    \caption{An example of encoding}
+    \label{tab:encoding_example}
+\end{table}
+
+If we need to decode a string such as \texttt{0111111} we encounter an issue: we don't know how to group characters, for example the first characters could either be a \texttt{B} or a \texttt{AC}.
+We would need first to decode the whole sequence and start decoding from the end, which is not efficient.
+
+This problem arises because the encoding is not \textit{prefix-free}, that is, no encoding of a character is a prefix of another encoding.
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{ |c|c| }
+        \hline
+        \textbf{Character} & \textbf{Encoding} \\
+        \hline
+        A                  & 01                \\
+        B                  & 100               \\
+        C                  & 00                \\
+        D                  & 101               \\
+        E                  & 11                \\
+        \hline
+    \end{tabular}
+
+    \caption{An example of prefix-free encoding}
+    \label{tab:prefix_free_encoding}
+\end{table}
+
+\subsection{The Huffman algorithm}
+
+Huffman found a method to create a prefix-free encodings.
+
+We build a binary tree where the root is the empty string and each child is adds a 0 or a 1 to the parent's string.
+Then we choose an encoding for each character of $\Omega$ only using the leaves of the tree.
+
+\subsubsection{Example}
+
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}
+        \node[draw, circle] (root) at (0, 0) {$\varnothing$};
+        \node[draw, circle] (A) at (-2, -1) {0};
+        \node[draw, circle] (B) at (2, -1) {1};
+        \node[draw, circle] (C) at (-3, -2) {00};
+        \node[draw, circle] (D) at (-1, -2) {01};
+        \node[draw, circle] (E) at (1, -2) {10};
+        \node[draw, circle] (F) at (3, -2) {11};
+        \node[draw, circle] (G) at (0, -3) {100};
+        \node[draw, circle] (H) at (2, -3) {101};
+
+
+        \draw[thick] (root) -- (A);
+        \draw[thick] (root) -- (B);
+        \draw[thick] (A) -- (C);
+        \draw[thick] (A) -- (D);
+        \draw[thick] (B) -- (E);
+        \draw[thick] (B) -- (F);
+        \draw[thick] (E) -- (G);
+        \draw[thick] (E) -- (H);
+
+        \node (C_label) at (-3, -3) {\texttt{A}};
+        \node (D_label) at (-1, -3) {\texttt{B}};
+        \node (G_label) at (0, -4) {\texttt{C}};
+        \node (H_label) at (2, -4) {\texttt{D}};
+        \node (F_label) at (3, -3) {\texttt{E}};
+    \end{tikzpicture}
+
+    \caption{An example of a Huffman tree}
+    \label{fig:huffman_tree}
+\end{figure}
+
+This is just an example but we see that the encoding of each character is prefix-free.
+
+Now we need to choose how to assign the encodings to the characters, ideally we want the most frequent characters to have the shortest encodings, that is to be closer to the root of the tree.
+
+\subsubsection{The algorithm}
+
+The idea of the algorithm is to start from the leaves, which are the characters of $\Omega$, and merge the two nodes with the smallest frequency until we are left with just one node.
+
+An implementation could look like this
+
+\begin{minted}{python}
+    class GraphNode:
+        def __init__(self, frequency, character=None, children=[]):
+            self.frequency = frequency
+            self.character = character
+            self.children = children
+
+    # frequency_map is an array of pairs (character, frequency)
+    def huffman_tree(frequency_map):
+        (graph_nodes, frequency) = map(
+            lambda x: (GraphNode(frequency=x[1], character=x[0], children=[]), x[1]),
+            frequency_map,
+        )
+
+        Q = PriorityQueue(graph_nodes, frequency)
+
+        while Q.size() > 1:
+            u = Q.dequeue()
+            v = Q.dequeue()
+            w = GraphNode(children=[u, v], frequency=u.frequency + v.frequency)
+
+            Q.enqueue(w)
+
+        return Q.dequeue()
+\end{minted}
+
+\section{Set cover problem}
+
+\subsection{Problem}
+
+Let $\Omega$ be a finite set and $S_1, S_2, \ldots, S_n$ be subsets of $\Omega$.
+
+We want to find a finite sequence $\left(i_n\right)$ up to $k$ such that the union of $S_{i_1}, S_{i_2}, \ldots, S_{i_k}$ is equal to $\Omega$.
+
+There is no known algorithm that can solve this problem efficiently, the only correct solution we know requires exponential time.
+
+Although the optimal solution has not been achieved yet we can use a greedy algorithm to find a good-enough approximation.
+
+\subsection{The greedy algorithm}
+
+\begin{minted}{python}
+    def set_cover_greedy(sets, omega):
+        U = omega # The set of elements that are not yet covered
+        C = Set() # The set of sets that will be returned
+
+        while not U.is_empty():
+            S = max(sets, key=lambda x: x.intersection(U).size())
+            C = C.union(S)
+            U = U.difference(S)
+
+        return C
+\end{minted}
+
+
+\subsubsection{How bad is the approximation?}
+
+Suppose that the optimal solution is $k^*$. We want to find, in the worst case, how many sets the greedy algorithm will return as a function of $k^*$.
+
+At least one of the subsets in $k^*$ must be of size at least $\abs{\Omega} / k^*$ (by the pigeonhole principle).
+Hence the greedy algorithm will choose at least a set of size $\abs{\Omega} / k^*$.
 
 \end{document}
