Use \vec instead of \munderbar

--- a/semester_2/computer_science_2.tex
+++ b/semester_2/computer_science_2.tex
@@ -1,6 +1,9 @@
 \documentclass[12pt]{extarticle}
 
 \usepackage{preamble}
+\usepackage{bytefield}
+\usepackage{minted}
+
 
 \title{Computer Science 2 Notes}
 \date{Semester 2, 2023/2024}
